# buildify-3dgs

./: CMakeLists.txt  README.md  build.sh  index.html  main.py  package-lock.json  pyproject.toml  setup.py  test_buildify.py
buildify/: CMakeLists.txt  __init__.py
cmake/: Buildify3DGSConfig.cmake.in
examples/: CMakeLists.txt  basic_example.cpp  benchmark.py  blender_example.cpp  buildify_tutorial.ipynb  interactive_demo.py  pytorch_example.cpp
experimental_blender_integration/: README.md  example_usage.py  final_example.py  main.py  pyproject.toml  quick_fix.py  simple_fix.py  simulation_script.py  test_colmap.py  test_integration.py  test_ply.py  ultra_simple.py
experimental_blender_integration/blender_colmap_3dgs/: __init__.py  blender_animation.py  colmap_parser.py  gaussian_splatting.py
include/buildify/: blender_integration.h  buildify.h  buildify.hpp  pytorch_integration.h
include/buildify/core/: engine.hpp  renderer.hpp  scene.hpp
include/buildify/utils/: logger.hpp  math.hpp
python/: __init__.py  bindings.cpp
src/: CMakeLists.txt
src/core/: blender_integration.cpp  context.cpp  engine.cpp  pytorch_integration.cpp  renderer.cpp  scene.cpp
src/utils/: logger.cpp  math.cpp
tests/: CMakeLists.txt  test_main.cpp
