[project]
name = "buildify-3dgs"
version = "0.1.0"
description = "3D Gaussian Splatting with Blender and AI integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pybind11>=2.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = [
    "setuptools>=65.0",
    "wheel",
    "cmake>=3.20",
    "pybind11>=2.11.0",
    "ninja",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["buildify"]

[tool.setuptools.package-data]
buildify = ["*.so", "*.pyd", "*.dll"]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-*"
skip = "*-musllinux_* *-win32"
test-requires = "pytest"
test-command = "pytest {project}/tests"

[tool.cibuildwheel.linux]
before-all = "yum install -y cmake"
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
before-all = "brew install cmake"
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} {wheel}"

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"
