[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blender-colmap-3dgs"
version = "0.1.0"
description = "COLMAP and 3D Gaussian Splatting integration for Blender"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "scipy>=1.11.0",
    "mathutils>=3.3.0",
    "bpy>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true